Better naming for GH jobs

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -6,7 +6,7 @@ on:
     branches:
      - main
 jobs:
-  build:
+  Deploy-to-WP-Engine-Production:
     runs-on: ubuntu-latest
     steps:
     - run: echo "Preparing to deploy to WP Engine production"
